Add function store to controller

--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -1,17 +1,20 @@
 <%- include('../include/head.ejs') %>
 <div class="container">
     <div class="row mt-5">
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <% products.forEach(product => { %>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src='<%= product.imageUrl %>' class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= product.title %></h5>
+                        <p class="card-text"><%= product.description %></p>
+                        <p class="card-text"><%= product.price %></p>
+                        <a href="#" class="btn btn-primary">Go to Products</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        <% }) %>
+        
     </div>
 </div>
 <%- include('../include/footer.ejs') %>
