--- a/views/include/navigation.ejs
+++ b/views/include/navigation.ejs
@@ -1,14 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand text-white" href="#">Mongoose MVC CRUD</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/products">Products</a>
-            </li>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <% if (isAuthenticated) { %>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/products">Products</a>
+                </li>
+            <% } %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <% if (!isAuthenticated) { %>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/signup">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/login">Login</a>
+                </li>
+            <% } else { %>
+                <li class="nav-item">
+                    <form action="/logout" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <button type="submit" class="btn btn-primary">Logout</button>
+                    </form>
+                </li>
+            <% } %>
         </ul>
     </div>
 </nav>
