--- a/views/product/edit-product.ejs
+++ b/views/product/edit-product.ejs
@@ -1,24 +1,42 @@
 <%- include('../include/head.ejs') %>
     <div class="container">
-        <form action="" method="POST">
+        <% if (errorMessage) { %>
+            <%- include('../include/message.ejs') %>
+        <% } %>
+        <h1 class="text-center mt-4 mb-4"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></h1>
+        <form action="/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input id="title" class="form-control" type="text" name="title">
+                <input id="title" 
+                    class="form-control <%= validationErrors.find(e => e.param === 'title') ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    name="title"
+                    value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
             <div class="form-group">
                 <label for="imageUrl">Image URL</label>
-                <input id="imageUrl" class="form-control" type="text" name="imageUrl">
+                <input id="imageUrl" 
+                    class="form-control <%= validationErrors.find(e => e.param === 'imageUrl') ? 'is-invalid' : '' %>" 
+                    type="text" name="imageUrl"
+                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
             </div>
             <div class="form-group">
                 <label for="price">Price</label>
-                <input id="price" class="form-control" type="number" name="price">
+                <input id="price" class="form-control <%= validationErrors.find(e => e.param === 'price') ? 'is-invalid' : '' %>" 
+                    type="text" name="price"
+                    value="<% if (editing || hasError) { %><%= product.price %><% } %>">
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea id="description" class="form-control" name="description"></textarea>
+                <textarea id="description" class="form-control <%= validationErrors.find(e => e.param === 'description') ? 'is-invalid' : '' %>" name="description"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
             </div>
+
+            <% if (editing) { %>
+                <input type="hidden" name="productId" value="<%= product._id %>">
+            <% } %>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button type="submit" class="btn btn-primary">Add Product</button>
+            <button type="submit" class="btn btn-primary"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></button>
+            <a href="/products" class="btn btn-primary">Back</a>
         </form>
     </div>
 <%- include('../include/footer.ejs') %>
