--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -5,18 +5,30 @@
         <% } %>
         
         <h1 class="text-center mt-4 mb-4">Sign Up</h1>
-        <form action="" method="POST">
+        <form action="/signup" method="POST">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input id="email" class="form-control" type="text" name="email">
+                <input id="email" 
+                    class="form-control <%= validationErrors.find(e => e.param === 'email') ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    name="email"
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input id="password" class="form-control" type="password" name="password">
+                <input id="password" 
+                    class="form-control <%= validationErrors.find(e => e.param === 'password') ? 'is-invalid' : '' %>" 
+                    type="password" 
+                    name="password"
+                    value="<%= oldInput.password %>">
             </div>
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
-                <input id="confirmPassword" class="form-control" type="password" name="confirmPassword">
+                <input id="confirmPassword" 
+                    class="form-control <%= validationErrors.find(e => e.param === 'confirmPassword') ? 'is-invalid' : '' %>"  
+                    type="password" 
+                    name="confirmPassword"
+                    value="<%= oldInput.confirmPassword %>">
             </div>
 
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
