--- a/views/product/edit-product.ejs
+++ b/views/product/edit-product.ejs
@@ -4,7 +4,8 @@
             <%- include('../include/message.ejs') %>
         <% } %>
         <h1 class="text-center mt-4 mb-4"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></h1>
-        <form action="/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form action="/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" 
+            enctype="multipart/form-data">
             <div class="form-group">
                 <label for="title">Title</label>
                 <input id="title" 
@@ -14,12 +15,16 @@
                     value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
             <div class="form-group">
+                <label for="image">Image</label>
+                <input id="image" class="form-control" type="file" name="image">
+            </div>
+            <!-- <div class="form-group">
                 <label for="imageUrl">Image URL</label>
                 <input id="imageUrl" 
                     class="form-control <%= validationErrors.find(e => e.param === 'imageUrl') ? 'is-invalid' : '' %>" 
                     type="text" name="imageUrl"
                     value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
-            </div>
+            </div> -->
             <div class="form-group">
                 <label for="price">Price</label>
                 <input id="price" class="form-control <%= validationErrors.find(e => e.param === 'price') ? 'is-invalid' : '' %>" 
